Split site/landing/demo layouts

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -30,15 +30,10 @@
 @import "general/icons";
 @import "general/forms";
 
-// Layout
-// ------
-
-@import "layout/banner";
-@import "layout/main";
-
 // Patterns
 // --------
 
+@import "patterns/banner";
 @import "patterns/toggle-content";
 @import "patterns/announcements";
 
