--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -3,5 +3,7 @@
 
 [role="main"] {
   @include container;
+  @include background-origin(content-box);
+  @include background-clip(content-box);
   padding: rhythm(1) 1em;
 }
