--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -1,48 +1,11 @@
 // Banner
 // ======
 
-[role="banner"] {
-  @include pie-clearfix;
-  @include trailing-border(1px,.5);
-  @include padding-leader(.5);
-  @include background(color(white,.95) linear-gradient(to top, color(lightest,.75), color(lightest,0)));
-  padding-left: 1em;
-  padding-right: 1em;
-
-  .org {
-    #{$link} {
-      font-weight: bold;
-      color: $base;
-    }
-    #{$focus} { color: $accent; }
-  }
-}
+[role="banner"] { @extend %banner; }
 
 .brand { @include span(40% no-gutters); }
 
 .user-nav {
+  @extend %user-nav;
   @include span(60% no-gutters);
-  text-align: right;
-
-  .fb-login {
-    @include icon(facebook) { padding-right: rhythm(.25); }
-  }
-  .user-name, .logout-form { display: inline-block; }
-
-  [name="logout"] {
-    @include icon-replace(exit);
-    padding: 0 rhythm(.25);
-    #{$focus} { color: $accent; }
-  }
-}
-
-
-// Fixed Banner
-
-%fixed-banner {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 900;
 }
