--- a/sass/modules/_story.scss
+++ b/sass/modules/_story.scss
@@ -3,22 +3,11 @@
 
 .no-stories-message {
   @include serif;
-  @include rhythm-padding(2);
-  @include adjust-font-size-to($largepx);
+  @include rhythm-padding(1);
+  @include adjust-font-size-to($medpx);
   color: color(lighter);
   text-align: center;
 }
-
-.toggle-addstory-body {
-  @extend %toggle-addstory;
-  @include leader;
-  @include adjust-font-size-to($xxxlargepx);
-  min-height: px-to-rhythm($xxxlargepx);
-  display: block;
-
-  #{$focus} { color: $alt; }
-}
-
 
 // Story
 // -----
@@ -55,7 +44,7 @@ $status-private-icon: lock;
 .story {
   @include pie-clearfix;
   @include rhythm-margins;
-  @include gallery(5 isolate);
+  @include gallery(4 isolate);
   position: relative;
 
   @include story-status-icon('hidden', $status-hidden-icon, $status-hidden-color);
