--- a/static/css/styleguide.css
+++ b/static/css/styleguide.css
@@ -173,7 +173,7 @@ a:focus, a:hover, a:active {
   font-style: normal;
 }
 
-.user-nav [name="logout"]:before, #messages .close:before, .toggle-addstory-main:before, .toggle-addstory-body:before, .story-status:before, .delete-story:before, .user-nav .fb-login:before, .announce:before, .message:before, .loading-icon:before, .story.hidden:before, .story.private:before, .story-private-notice:before, .icons-demo div:nth-child(1):before, .icons-demo div:nth-child(2):before, .icons-demo div:nth-child(3):before, .icons-demo div:nth-child(4):before, .icons-demo div:nth-child(5):before, .icons-demo div:nth-child(6):before, .icons-demo div:nth-child(7):before, .icons-demo div:nth-child(8):before, .icons-demo div:nth-child(9):before, .icons-demo div:nth-child(10):before, .icons-demo div:nth-child(11):before, .icons-demo div:nth-child(12):before, .icons-demo div:nth-child(13):before, .icons-demo div:nth-child(14):before, .icons-demo div:nth-child(15):before, [data-icon]:before {
+.user-nav [name="logout"]:before, #messages .close:before, .story-status:before, .delete-story:before, .user-nav .fb-login:before, .announce:before, .message:before, .loading-icon:before, .icon-addstory:before, .story.hidden:before, .story.private:before, .story-private-notice:before, .icons-demo div:nth-child(1):before, .icons-demo div:nth-child(2):before, .icons-demo div:nth-child(3):before, .icons-demo div:nth-child(4):before, .icons-demo div:nth-child(5):before, .icons-demo div:nth-child(6):before, .icons-demo div:nth-child(7):before, .icons-demo div:nth-child(8):before, .icons-demo div:nth-child(9):before, .icons-demo div:nth-child(10):before, .icons-demo div:nth-child(11):before, .icons-demo div:nth-child(12):before, .icons-demo div:nth-child(13):before, .icons-demo div:nth-child(14):before, .icons-demo div:nth-child(15):before, [data-icon]:before {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -182,7 +182,7 @@ a:focus, a:hover, a:active {
   speak: none;
 }
 
-.user-nav [name="logout"], #messages .close, .toggle-addstory-main, .toggle-addstory-body, .story-status, .delete-story {
+.user-nav [name="logout"], #messages .close, .story-status, .delete-story {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -190,7 +190,7 @@ a:focus, a:hover, a:active {
   min-width: 1em;
   text-indent: -9999px;
 }
-.user-nav [name="logout"]:before, #messages .close:before, .toggle-addstory-main:before, .toggle-addstory-body:before, .story-status:before, .delete-story:before {
+.user-nav [name="logout"]:before, #messages .close:before, .story-status:before, .delete-story:before {
   position: absolute;
   top: 0;
   left: 0;
@@ -211,7 +211,7 @@ a:focus, a:hover, a:active {
   content: "\e004";
 }
 
-.toggle-addstory-main:before, .toggle-addstory-body:before, .icons-demo div:nth-child(3):before {
+.icon-addstory:before, .icons-demo div:nth-child(3):before {
   content: "\e005";
 }
 
@@ -275,7 +275,7 @@ button {
   cursor: pointer;
 }
 
-.primary-action {
+.primary-action, .toggle-addstory {
   border-width: 1px;
   border-width: 0.05556rem;
   border-style: solid;
@@ -294,13 +294,13 @@ button {
   cursor: pointer;
 }
 
-.primary-action:hover, .primary-action:focus {
+.primary-action:hover, .toggle-addstory:hover, .primary-action:focus, .toggle-addstory:focus {
   -webkit-box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
   -moz-box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
   box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
 }
 
-.primary-action:active {
+.primary-action:active, .toggle-addstory:active {
   -webkit-box-shadow: rgba(15, 15, 15, 0.5) 0 0 0.25rem inset;
   -moz-box-shadow: rgba(15, 15, 15, 0.5) 0 0 0.25rem inset;
   box-shadow: rgba(15, 15, 15, 0.5) 0 0 0.25rem inset;
@@ -322,6 +322,25 @@ button {
 }
 .primary-action:after {
   content: " »";
+}
+
+.toggle-addstory {
+  font-size: 32px;
+  font-size: 1.77778rem;
+  line-height: 46px;
+  line-height: 2.55556rem;
+  border-top-width: 1px;
+  border-top-width: 0.05556rem;
+  border-top-style: solid;
+  padding-top: 11px;
+  padding-top: 0.58333rem;
+  border-bottom-width: 1px;
+  border-bottom-width: 0.05556rem;
+  border-bottom-style: solid;
+  padding-bottom: 11px;
+  padding-bottom: 0.58333rem;
+  padding-left: 1.27778rem;
+  padding-right: 1.27778rem;
 }
 
 .form-actions {
@@ -950,17 +969,7 @@ select {
 }
 
 [role="main"] {
-  background: -webkit-linear-gradient(left, rgba(179, 179, 255, 0.25) 8.33333%, transparent 8.33333%, transparent 8.33333%, rgba(102, 102, 255, 0.25) 8.33333%, rgba(179, 179, 255, 0.25) 16.66667%, transparent 16.66667%, transparent 16.66667%, rgba(102, 102, 255, 0.25) 16.66667%, rgba(179, 179, 255, 0.25) 25%, transparent 25%, transparent 25%, rgba(102, 102, 255, 0.25) 25%, rgba(179, 179, 255, 0.25) 33.33333%, transparent 33.33333%, transparent 33.33333%, rgba(102, 102, 255, 0.25) 33.33333%, rgba(179, 179, 255, 0.25) 41.66667%, transparent 41.66667%, transparent 41.66667%, rgba(102, 102, 255, 0.25) 41.66667%, rgba(179, 179, 255, 0.25) 50%, transparent 50%, transparent 50%, rgba(102, 102, 255, 0.25) 50%, rgba(179, 179, 255, 0.25) 58.33333%, transparent 58.33333%, transparent 58.33333%, rgba(102, 102, 255, 0.25) 58.33333%, rgba(179, 179, 255, 0.25) 66.66667%, transparent 66.66667%, transparent 66.66667%, rgba(102, 102, 255, 0.25) 66.66667%, rgba(179, 179, 255, 0.25) 75%, transparent 75%, transparent 75%, rgba(102, 102, 255, 0.25) 75%, rgba(179, 179, 255, 0.25) 83.33333%, transparent 83.33333%, transparent 83.33333%, rgba(102, 102, 255, 0.25) 83.33333%, rgba(179, 179, 255, 0.25) 91.66667%, transparent 91.66667%, transparent 91.66667%, rgba(102, 102, 255, 0.25) 91.66667%, rgba(179, 179, 255, 0.25) 100%), -webkit-linear-gradient(bottom, rgba(76, 76, 76, 0.25) 5%, rgba(76, 76, 76, 0) 5%);
-  background: -moz-linear-gradient(left, rgba(179, 179, 255, 0.25) 8.33333%, transparent 8.33333%, transparent 8.33333%, rgba(102, 102, 255, 0.25) 8.33333%, rgba(179, 179, 255, 0.25) 16.66667%, transparent 16.66667%, transparent 16.66667%, rgba(102, 102, 255, 0.25) 16.66667%, rgba(179, 179, 255, 0.25) 25%, transparent 25%, transparent 25%, rgba(102, 102, 255, 0.25) 25%, rgba(179, 179, 255, 0.25) 33.33333%, transparent 33.33333%, transparent 33.33333%, rgba(102, 102, 255, 0.25) 33.33333%, rgba(179, 179, 255, 0.25) 41.66667%, transparent 41.66667%, transparent 41.66667%, rgba(102, 102, 255, 0.25) 41.66667%, rgba(179, 179, 255, 0.25) 50%, transparent 50%, transparent 50%, rgba(102, 102, 255, 0.25) 50%, rgba(179, 179, 255, 0.25) 58.33333%, transparent 58.33333%, transparent 58.33333%, rgba(102, 102, 255, 0.25) 58.33333%, rgba(179, 179, 255, 0.25) 66.66667%, transparent 66.66667%, transparent 66.66667%, rgba(102, 102, 255, 0.25) 66.66667%, rgba(179, 179, 255, 0.25) 75%, transparent 75%, transparent 75%, rgba(102, 102, 255, 0.25) 75%, rgba(179, 179, 255, 0.25) 83.33333%, transparent 83.33333%, transparent 83.33333%, rgba(102, 102, 255, 0.25) 83.33333%, rgba(179, 179, 255, 0.25) 91.66667%, transparent 91.66667%, transparent 91.66667%, rgba(102, 102, 255, 0.25) 91.66667%, rgba(179, 179, 255, 0.25) 100%), -moz-linear-gradient(bottom, rgba(76, 76, 76, 0.25) 5%, rgba(76, 76, 76, 0) 5%);
-  background: -o-linear-gradient(left, rgba(179, 179, 255, 0.25) 8.33333%, transparent 8.33333%, transparent 8.33333%, rgba(102, 102, 255, 0.25) 8.33333%, rgba(179, 179, 255, 0.25) 16.66667%, transparent 16.66667%, transparent 16.66667%, rgba(102, 102, 255, 0.25) 16.66667%, rgba(179, 179, 255, 0.25) 25%, transparent 25%, transparent 25%, rgba(102, 102, 255, 0.25) 25%, rgba(179, 179, 255, 0.25) 33.33333%, transparent 33.33333%, transparent 33.33333%, rgba(102, 102, 255, 0.25) 33.33333%, rgba(179, 179, 255, 0.25) 41.66667%, transparent 41.66667%, transparent 41.66667%, rgba(102, 102, 255, 0.25) 41.66667%, rgba(179, 179, 255, 0.25) 50%, transparent 50%, transparent 50%, rgba(102, 102, 255, 0.25) 50%, rgba(179, 179, 255, 0.25) 58.33333%, transparent 58.33333%, transparent 58.33333%, rgba(102, 102, 255, 0.25) 58.33333%, rgba(179, 179, 255, 0.25) 66.66667%, transparent 66.66667%, transparent 66.66667%, rgba(102, 102, 255, 0.25) 66.66667%, rgba(179, 179, 255, 0.25) 75%, transparent 75%, transparent 75%, rgba(102, 102, 255, 0.25) 75%, rgba(179, 179, 255, 0.25) 83.33333%, transparent 83.33333%, transparent 83.33333%, rgba(102, 102, 255, 0.25) 83.33333%, rgba(179, 179, 255, 0.25) 91.66667%, transparent 91.66667%, transparent 91.66667%, rgba(102, 102, 255, 0.25) 91.66667%, rgba(179, 179, 255, 0.25) 100%), -o-linear-gradient(bottom, rgba(76, 76, 76, 0.25) 5%, rgba(76, 76, 76, 0) 5%);
-  background: linear-gradient(to right, rgba(179, 179, 255, 0.25) 8.33333%, transparent 8.33333%, transparent 8.33333%, rgba(102, 102, 255, 0.25) 8.33333%, rgba(179, 179, 255, 0.25) 16.66667%, transparent 16.66667%, transparent 16.66667%, rgba(102, 102, 255, 0.25) 16.66667%, rgba(179, 179, 255, 0.25) 25%, transparent 25%, transparent 25%, rgba(102, 102, 255, 0.25) 25%, rgba(179, 179, 255, 0.25) 33.33333%, transparent 33.33333%, transparent 33.33333%, rgba(102, 102, 255, 0.25) 33.33333%, rgba(179, 179, 255, 0.25) 41.66667%, transparent 41.66667%, transparent 41.66667%, rgba(102, 102, 255, 0.25) 41.66667%, rgba(179, 179, 255, 0.25) 50%, transparent 50%, transparent 50%, rgba(102, 102, 255, 0.25) 50%, rgba(179, 179, 255, 0.25) 58.33333%, transparent 58.33333%, transparent 58.33333%, rgba(102, 102, 255, 0.25) 58.33333%, rgba(179, 179, 255, 0.25) 66.66667%, transparent 66.66667%, transparent 66.66667%, rgba(102, 102, 255, 0.25) 66.66667%, rgba(179, 179, 255, 0.25) 75%, transparent 75%, transparent 75%, rgba(102, 102, 255, 0.25) 75%, rgba(179, 179, 255, 0.25) 83.33333%, transparent 83.33333%, transparent 83.33333%, rgba(102, 102, 255, 0.25) 83.33333%, rgba(179, 179, 255, 0.25) 91.66667%, transparent 91.66667%, transparent 91.66667%, rgba(102, 102, 255, 0.25) 91.66667%, rgba(179, 179, 255, 0.25) 100%), linear-gradient(to top, rgba(76, 76, 76, 0.25) 5%, rgba(76, 76, 76, 0) 5%);
-  background: linear-gradient(to right, rgba(179, 179, 255, 0.25) 8.33333%, transparent 8.33333%, transparent 8.33333%, rgba(102, 102, 255, 0.25) 8.33333%, rgba(179, 179, 255, 0.25) 16.66667%, transparent 16.66667%, transparent 16.66667%, rgba(102, 102, 255, 0.25) 16.66667%, rgba(179, 179, 255, 0.25) 25%, transparent 25%, transparent 25%, rgba(102, 102, 255, 0.25) 25%, rgba(179, 179, 255, 0.25) 33.33333%, transparent 33.33333%, transparent 33.33333%, rgba(102, 102, 255, 0.25) 33.33333%, rgba(179, 179, 255, 0.25) 41.66667%, transparent 41.66667%, transparent 41.66667%, rgba(102, 102, 255, 0.25) 41.66667%, rgba(179, 179, 255, 0.25) 50%, transparent 50%, transparent 50%, rgba(102, 102, 255, 0.25) 50%, rgba(179, 179, 255, 0.25) 58.33333%, transparent 58.33333%, transparent 58.33333%, rgba(102, 102, 255, 0.25) 58.33333%, rgba(179, 179, 255, 0.25) 66.66667%, transparent 66.66667%, transparent 66.66667%, rgba(102, 102, 255, 0.25) 66.66667%, rgba(179, 179, 255, 0.25) 75%, transparent 75%, transparent 75%, rgba(102, 102, 255, 0.25) 75%, rgba(179, 179, 255, 0.25) 83.33333%, transparent 83.33333%, transparent 83.33333%, rgba(102, 102, 255, 0.25) 83.33333%, rgba(179, 179, 255, 0.25) 91.66667%, transparent 91.66667%, transparent 91.66667%, rgba(102, 102, 255, 0.25) 91.66667%, rgba(179, 179, 255, 0.25) 100%), linear-gradient(to top, rgba(76, 76, 76, 0.25) 5%, rgba(76, 76, 76, 0) 5%);
-  -webkit-background-size: 100% 23px;
-  -moz-background-size: 100% 23px;
-  -o-background-size: 100% 23px;
-  background-size: 100% 23px;
-  background-position: left top;
-  max-width: 100%;
+  max-width: 90em;
   margin-left: auto;
   margin-right: auto;
   -webkit-background-origin: content;
@@ -982,11 +991,8 @@ select {
 }
 
 .teacher-info {
-  border-bottom-width: 1px;
-  border-bottom-width: 0.05556rem;
-  border-bottom-style: solid;
-  padding-bottom: 11px;
-  padding-bottom: 0.58333rem;
+  margin-bottom: 23px;
+  margin-bottom: 1.27778rem;
   border-color: #b2b2b2;
 }
 
@@ -998,33 +1004,60 @@ select {
   margin-right: 1.27778rem;
 }
 
-.toggle-addstory-main {
-  margin-top: 12px;
-  margin-top: 0.63889rem;
+.add-story-form {
+  border-width: 2px;
+  border-width: 0.11111rem;
+  border-style: solid;
+  padding: 21px;
+  padding: 1.16667rem;
+  margin-bottom: 23px;
+  margin-bottom: 1.27778rem;
+  background: rgba(255, 255, 255, 0.5);
+  border-color: rgba(229, 229, 229, 0.75);
+}
+
+.submitter_name-field, .submitter_email-field {
+  width: 49.15254%;
+  float: left;
+  margin-right: 1.69492%;
+}
+
+.submitter_email-field {
+  float: right;
+  margin-right: 0;
+}
+
+.private-field {
+  clear: both;
+  text-align: right;
+}
+
+.icon-addstory {
   font-size: 86px;
   font-size: 4.77778rem;
   line-height: 92px;
   line-height: 5.11111rem;
-  float: right;
-  margin-left: 1.27778rem;
-  min-height: 5.11111rem;
-  color: #007474;
-}
-.toggle-addstory-main:focus, .toggle-addstory-main:hover, .toggle-addstory-main:active {
-  color: #94001a;
+  margin-right: 0.63889rem;
 }
 
-.add-story-form {
-  padding-top: 12px;
-  padding-top: 0.63889rem;
-  border-bottom-width: 1px;
-  border-bottom-width: 0.05556rem;
-  border-bottom-style: solid;
-  padding-bottom: 22px;
-  padding-bottom: 1.22222rem;
-  margin-bottom: 23px;
-  margin-bottom: 1.27778rem;
-  border-color: #999999;
+.icon-addstory, .text-addstory {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.toggle-addstory {
+  font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font-size: 32px;
+  font-size: 1.77778rem;
+  line-height: 46px;
+  line-height: 2.55556rem;
+  color: #007474;
+  text-align: center;
+  cursor: pointer;
+  display: none;
+}
+.toggle-addstory:focus, .toggle-addstory:hover, .toggle-addstory:active {
+  color: #94001a;
 }
 
 [id="story-form-toggle"] {
@@ -1032,33 +1065,22 @@ select {
   left: -9999px;
   opacity: .01;
 }
+[id="story-form-toggle"]:checked ~ .toggle-addstory {
+  display: block;
+}
 
 .no-stories-message {
   font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
-  padding-top: 46px;
-  padding-top: 2.55556rem;
-  padding-bottom: 46px;
-  padding-bottom: 2.55556rem;
-  font-size: 32px;
-  font-size: 1.77778rem;
-  line-height: 46px;
-  line-height: 2.55556rem;
+  padding-top: 23px;
+  padding-top: 1.27778rem;
+  padding-bottom: 23px;
+  padding-bottom: 1.27778rem;
+  font-size: 23px;
+  font-size: 1.27778rem;
+  line-height: 35px;
+  line-height: 1.91667rem;
   color: #b2b2b2;
   text-align: center;
-}
-
-.toggle-addstory-body {
-  margin-top: 23px;
-  margin-top: 1.27778rem;
-  font-size: 135px;
-  font-size: 7.5rem;
-  line-height: 150px;
-  line-height: 8.30556rem;
-  min-height: 7.66667rem;
-  display: block;
-}
-.toggle-addstory-body:focus, .toggle-addstory-body:hover, .toggle-addstory-body:active {
-  color: #007474;
 }
 
 .story.hidden:before, .story.private:before {
@@ -1080,7 +1102,7 @@ select {
   margin-top: 1.27778rem;
   margin-bottom: 23px;
   margin-bottom: 1.27778rem;
-  width: 41.66667%;
+  width: 32.20339%;
   float: left;
   margin-right: -100%;
   position: relative;
@@ -1090,11 +1112,14 @@ select {
   display: table;
   clear: both;
 }
-.story:nth-child(2n + 1) {
+.story:nth-child(3n + 1) {
   clear: left;
 }
-.story:nth-child(2n + 2) {
-  margin-left: 41.66667%;
+.story:nth-child(3n + 2) {
+  margin-left: 33.89831%;
+}
+.story:nth-child(3n + 3) {
+  margin-left: 67.79661%;
 }
 .story.hidden:before {
   background: #f7cd66;
