--- a/templates/_add_story_form.html
+++ b/templates/_add_story_form.html
@@ -2,15 +2,14 @@
   {% csrf_token %}
   {% include "forms/errors.html" with errors=form.non_field_errors %}
 
-  {% with label="Leave a story for "|add:teacher.full_name %}
   {% with help_text="You can include video by pasting in a <a href='http://youtube.com/'>youtube</a> link." %}
-  {% include "forms/formfield.html" with field=form.body label=label help_text=help_text %}
-  {% endwith %}
+  {% include "forms/formfield.html" with field=form.body label="Story" help_text=help_text %}
   {% endwith %}
 
-  {% include "forms/formfield.html" with field=form.private label="Keep this story private" %}
   {% include "forms/formfield.html" with field=form.submitter_name label="Name" %}
   {% include "forms/formfield.html" with field=form.submitter_email label="Email" %}
+
+  {% include "forms/formfield.html" with field=form.private label="Keep this story private" %}
 
   <div class="form-actions">
     <button class="primary-action" type="submit" name="submit">Send</button>
