--- a/templates/create_profile.html
+++ b/templates/create_profile.html
@@ -1,30 +1,32 @@
 {% extends "base_site.html" %}
 
 {% block main %}
-<p>Welcome to the K Network!</p>
+<div class="create-profile">
+  <div class="profile-help">
+    <h1 class="profile-help-title">Welcome to the K Network!</h1>
 
-<p>
-  If you're a teacher and you'd like to create a public teacher profile, fill
-  out your school name and a brief bio (enough for your students to know they've
-  got the right teacher!) below and click "Create Teacher Profile."
-</p>
-
-<p>
-  If you're just here to submit stories for your favorite teachers, not receive
-  stories, you can <a href="{{ profile_next }}">skip this</a>.
-</p>
-
-<form method="POST">
-  {% csrf_token %}
-  {% include "forms/errors.html" with errors=form.non_field_errors %}
-
-  {% include "forms/formfield.html" with field=form.school label="School" %}
-  {% include "forms/formfield.html" with field=form.bio label="Bio" %}
-
-  <div class="form-actions">
-    <button class="primary-action" type="submit" name="submit">Create Teacher Profile</button>
+    <p>
+      If you would like to create a public teacher profile, fill
+      out your school name and a brief bio.
+      If you are just here to thank your favorite teachers,
+      you can <a href="{{ profile_next }}">skip this step</a>.
+    </p>
   </div>
 
-</form>
+  <form class="create-profile-form" method="POST">
+    {% csrf_token %}
+    {% include "forms/errors.html" with errors=form.non_field_errors %}
 
+    {% include "forms/formfield.html" with field=form.school label="School" %}
+
+    {% with 'Provide enough detail for students to identify you.' as help_text %}
+    {% include "forms/formfield.html" with field=form.bio label="Bio" help_text=help_text %}
+    {% endwith %}
+
+    <div class="form-actions">
+      <span><a href="{{ profile.next }}">skip this</a> or</span>
+      <button class="primary-action" type="submit" name="submit">Create Profile</button>
+    </div>
+  </form>
+</div>
 {% endblock %}
