--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -158,7 +158,7 @@ a:focus, a:hover, a:active {
   left: -9999px;
 }
 
-.profile-help h1, .teacher-name {
+.login h1, .profile-help h1, .teacher-name {
   font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
   font-size: 43px;
   font-size: 2.38889rem;
@@ -166,37 +166,37 @@ a:focus, a:hover, a:active {
   line-height: 3.19444rem;
 }
 
-.profile-help h1 a:link, .profile-help h1 a:visited {
+.login h1 a:link, .profile-help h1 a:link, .login h1 a:visited, .profile-help h1 a:visited {
   color: #005c5c;
 }
-.profile-help h1 a:focus, .profile-help h1 a:hover, .profile-help h1 a:active {
+.login h1 a:focus, .profile-help h1 a:focus, .login h1 a:hover, .profile-help h1 a:hover, .login h1 a:active, .profile-help h1 a:active {
   color: #760014;
 }
-.profile-help h2 {
+.login h2, .profile-help h2 {
   margin-bottom: 12px;
   margin-bottom: 0.63889rem;
   text-transform: uppercase;
 }
-.profile-help h3 {
+.login h3, .profile-help h3 {
   margin-top: 23px;
   margin-top: 1.27778rem;
   font-weight: bold;
 }
 
-.profile-help strong {
+.login strong, .profile-help strong {
   font-weight: bold;
 }
-.profile-help em {
+.login em, .profile-help em {
   font-style: italic;
 }
-.profile-help p, .profile-help ul, .profile-help ol, .profile-help pre {
+.login p, .profile-help p, .login ul, .profile-help ul, .login ol, .profile-help ol, .login pre, .profile-help pre {
   margin-bottom: 23px;
   margin-bottom: 1.27778rem;
 }
-.profile-help ul {
+.login ul, .profile-help ul {
   list-style: disc;
 }
-.profile-help ol {
+.login ol, .profile-help ol {
   list-style: decimal;
 }
 
@@ -207,7 +207,7 @@ a:focus, a:hover, a:active {
   font-style: normal;
 }
 
-.user-nav [name="logout"]:before, #messages .close:before, .toggle-addstory-main:before, .toggle-addstory-body:before, .story-status:before, .delete-story:before, .user-nav .fb-login:before, .announce:before, .message:before, .loading-icon:before, .story.hidden:before, .story.private:before, .story-private-notice:before, [data-icon]:before {
+.user-nav [name="logout"]:before, #messages .close:before, .toggle-addstory-main:before, .toggle-addstory-body:before, .story-status:before, .delete-story:before, .user-nav .fb-login:before, .announce:before, .message:before, .loading-icon:before, .login .fb-login:before, .story.hidden:before, .story.private:before, .story-private-notice:before, [data-icon]:before {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -249,7 +249,7 @@ a:focus, a:hover, a:active {
   content: "\e006";
 }
 
-.user-nav .fb-login:before {
+.user-nav .fb-login:before, .login .fb-login:before {
   content: "\e007";
 }
 
@@ -301,7 +301,7 @@ button {
   cursor: pointer;
 }
 
-.primary-action {
+.primary-action, .login .fb-login {
   border-width: 1px;
   border-width: 0.05556rem;
   border-style: solid;
@@ -320,13 +320,13 @@ button {
   cursor: pointer;
 }
 
-.primary-action:hover, .primary-action:focus {
+.primary-action:hover, .login .fb-login:hover, .primary-action:focus, .login .fb-login:focus {
   -webkit-box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
   -moz-box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
   box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
 }
 
-.primary-action:active {
+.primary-action:active, .login .fb-login:active {
   -webkit-box-shadow: rgba(15, 15, 15, 0.5) 0 0 0.25rem inset;
   -moz-box-shadow: rgba(15, 15, 15, 0.5) 0 0 0.25rem inset;
   box-shadow: rgba(15, 15, 15, 0.5) 0 0 0.25rem inset;
@@ -348,6 +348,25 @@ button {
 }
 .primary-action:after {
   content: " »";
+}
+
+.login .fb-login {
+  font-size: 32px;
+  font-size: 1.77778rem;
+  line-height: 46px;
+  line-height: 2.55556rem;
+  border-top-width: 1px;
+  border-top-width: 0.05556rem;
+  border-top-style: solid;
+  padding-top: 11px;
+  padding-top: 0.58333rem;
+  border-bottom-width: 1px;
+  border-bottom-width: 0.05556rem;
+  border-bottom-style: solid;
+  padding-bottom: 11px;
+  padding-bottom: 0.58333rem;
+  padding-left: 1.27778rem;
+  padding-right: 1.27778rem;
 }
 
 .form-actions {
@@ -992,6 +1011,14 @@ select {
 }
 .loading-icon:before {
   vertical-align: middle;
+}
+
+.login {
+  text-align: center;
+}
+.login .fb-login {
+  margin-top: 23px;
+  margin-top: 1.27778rem;
 }
 
 .teacher-detail {
