--- a/sass/base/_grids.scss
+++ b/sass/base/_grids.scss
@@ -12,7 +12,7 @@ $show-grid-backgrounds            : false;
 // ---------------------------------------------------------------------------
 // Grids
 
-@include set-grid(80em 12 (4em 1em) hide);
+@include set-grid(12 (4em 1em) hide);
 
 @mixin full {
   padding-left: gutter() / 2;
