Fix skip-step link typo

--- a/templates/create_profile.html
+++ b/templates/create_profile.html
@@ -24,7 +24,7 @@
     {% endwith %}
 
     <div class="form-actions">
-      <span><a href="{{ profile.next }}">skip this</a> or</span>
+      <span><a href="{{ profile_next }}">skip this</a> or</span>
       <button class="primary-action" type="submit" name="submit">Create Profile</button>
     </div>
   </form>
