--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1020,6 +1020,9 @@ select {
   margin-top: 23px;
   margin-top: 1.27778rem;
 }
+.login .fb-login:before {
+  padding-right: .4em;
+}
 
 .teacher-detail {
   position: relative;
