capitalize "The K Network"

--- a/templates/create_profile.html
+++ b/templates/create_profile.html
@@ -3,7 +3,7 @@
 {% block main %}
 <div class="create-profile">
   <div class="profile-help">
-    <h1 class="profile-help-title">Welcome to the K Network!</h1>
+    <h1 class="profile-help-title">Welcome to The K Network!</h1>
 
     <p>
       If you would like to create a public teacher profile, fill
