Cache rendered story bodies.

--- a/templates/_story.html
+++ b/templates/_story.html
@@ -1,8 +1,10 @@
-{% load markup micawber_tags %}
+{% load cache markup micawber_tags %}
 <article class="story {{ story.published|yesno:'published,hidden' }} {{ story.private|yesno:'private,public' }}">
+  {% cache STORY_CACHE_TIMEOUT|default:1 story-body story.id %}
   <div class="story-body">
     {{ story.body|markdown|oembed_html }}
   </div>
+  {% endcache %}
 
   <header class="story-info">
     <h1 class="author-name">{{ story.submitter_name }}</h1>
