Clarify signup profile choice

--- a/sass/general/_forms.scss
+++ b/sass/general/_forms.scss
@@ -5,5 +5,6 @@
 @import "forms/formfields";
 @import "forms/inputs";
 @import "forms/labels";
+@import "forms/form-layouts";
 
 @import "forms/radio-select";
