--- a/templates/create_profile.html
+++ b/templates/create_profile.html
@@ -7,12 +7,14 @@
   <input type="checkbox" id="create-profile-toggle" checked />
   <label for="create-profile-toggle" class="toggle-profile">
     I'm a teacher:
-    <strong>create profile »</strong>
+    <strong>create a profile</strong>
+    where I can recieve thank-you notes.
   </label>
 
   <a href="{{ profile_next }}" class="skip-profile">
     I'm not a teacher:
-    <strong>skip this step »</strong>
+    <strong>skip this step</strong>
+    I'm just here to thank inspiring teachers.
   </a>
 
   <form class="create-profile-form" method="POST">
