--- a/static/css/styleguide.css
+++ b/static/css/styleguide.css
@@ -1110,6 +1110,9 @@ select {
   font-weight: bold;
   text-transform: uppercase;
 }
+.toggle-profile strong:after, .skip-profile strong:after {
+  content: " »";
+}
 
 .toggle-profile {
   width: 49.15254%;
