--- a/templates/create_profile.html
+++ b/templates/create_profile.html
@@ -8,7 +8,7 @@
   <label for="create-profile-toggle" class="toggle-profile">
     I'm a teacher:
     <strong>create a profile</strong>
-    where I can recieve thank-you notes.
+    where I can receive thank-you notes.
   </label>
 
   <a href="{{ profile_next }}" class="skip-profile">
