--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -3,7 +3,7 @@
 {% block main %}
 Confirm that you want to log out:
 
-<form class="logout-form" method="POST">
+<form id="main-logout-form" class="logout-form" method="POST">
   {% csrf_token %}
   <button type="submit" name="logout">Log out</button>
 </form>
