--- a/templates/create_profile.html
+++ b/templates/create_profile.html
@@ -17,7 +17,7 @@
     I'm just here to thank inspiring teachers.
   </a>
 
-  <form class="create-profile-form" method="POST">
+  <form id="create-profile-form" class="create-profile-form" method="POST">
     {% csrf_token %}
     {% include "forms/errors.html" with errors=form.non_field_errors %}
 
