--- a/templates/_add_story_form.html
+++ b/templates/_add_story_form.html
@@ -1,13 +1,10 @@
-<form class="add-story-form" method="POST">
+<form id="add-story-form" class="add-story-form" method="POST">
   {% csrf_token %}
   {% include "forms/errors.html" with errors=form.non_field_errors %}
 
   {% with help_text="You can include video by pasting in a <a href='http://youtube.com/'>youtube</a> link." %}
   {% include "forms/formfield.html" with field=form.body label="Story" help_text=help_text %}
   {% endwith %}
-
-  {% include "forms/formfield.html" with field=form.submitter_name label="Name" %}
-  {% include "forms/formfield.html" with field=form.submitter_email label="Email" %}
 
   {% include "forms/formfield.html" with field=form.private label="Keep this story private" %}
 
