--- a/templates/teacher_detail.html
+++ b/templates/teacher_detail.html
@@ -24,7 +24,7 @@
   </header>
 
   {# Story Form #}
-  {% if user != teacher.user %} {# no leaving stories for yourself! #}
+  {% if user.is_authenticated %}
   <input type="checkbox" id="story-form-toggle" checked/>
   <label for="story-form-toggle" class="toggle-addstory">
     <span class="icon-addstory"></span>
