Display story attribution and date correctly.

--- a/templates/_story.html
+++ b/templates/_story.html
@@ -5,8 +5,8 @@
   </div>
 
   <header class="story-info">
-    <h1 class="author-name">{{ story.submitter_name }}</h1>
-    <time class="pubdate" pubdate>{{ story.created|date:'F j, Y' }}</time>
+    <h1 class="author-name">{{ story.attribution }}</h1>
+    <time class="pubdate" pubdate>{{ story.date|date:'F j, Y' }}</time>
   </header>
 
   {% if user == teacher.user %}
