Remove add-story-form from own profile again (for now).

--- a/templates/teacher_detail.html
+++ b/templates/teacher_detail.html
@@ -24,7 +24,7 @@
   </header>
 
   {# Story Form #}
-  {% if user.is_authenticated %}
+  {% if user.is_authenticated and user != teacher.user %}
   <input type="checkbox" id="story-form-toggle" checked/>
   <label for="story-form-toggle" class="toggle-addstory">
     <span class="icon-addstory"></span>
