Oembeds working, layout broken

--- a/sass/base/_grids.scss
+++ b/sass/base/_grids.scss
@@ -12,4 +12,4 @@ $show-grid-backgrounds            : false;
 // ---------------------------------------------------------------------------
 // Grids
 
-@include set-grid(12 (4em 1em) hide);
+@include set-grid(35em 8 1/4 hide);
